# fastskill

./: .gitignore  .repomixignore  AGENTS.md  CHANGELOG  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  REFACTORING_SUMMARY.md  SECURITY.md  STYLE.md  coverage-before.lcov  nextest.toml  repomix.config.json  rust-toolchain.toml  test_results.json  test_results.md
.github/: dependabot.yml
.github/workflows/: auto-deploy-on-merge.yml  auto-release.yml  ci.yml  coverage.yml  pr-test.yml  release.yml  simple-test.yml  test.yml
.opencode/: opencode.json
crates/evals-core/: CONTRIBUTING.md  Cargo.toml
crates/evals-core/src/: checks.rs  lib.rs  runner.rs  trace.rs
crates/fastskill/: Cargo.toml
crates/fastskill-agent-runtime/: Cargo.toml
crates/fastskill-agent-runtime/src/: lib.rs  runtime_selector.rs
crates/fastskill-cli/: CONTRIBUTING.md  Cargo.toml  README.md
crates/fastskill-cli/src/: arg_helpers.rs  auth_config.rs  cli.rs  config.rs  config_file.rs  context.rs  error.rs  main.rs  mod.rs  runtime_selector.rs  utils.rs
crates/fastskill-cli/src/commands/: add.rs  analyze.rs  auth.rs  common.rs  disable.rs  doctor.rs  init.rs  install.rs  list.rs  marketplace.rs  mod.rs  package.rs  publish.rs  read.rs  reindex.rs  remove.rs  repos.rs  resolve.rs  search.rs  serve.rs  show.rs  sources.rs  sync.rs  update.rs  version.rs
crates/fastskill-cli/src/commands/add/: install.rs  mod.rs  skill_def.rs  sources.rs
crates/fastskill-cli/src/commands/analyze/: cluster.rs  duplicates.rs  helpers.rs  matrix.rs  mod.rs
crates/fastskill-cli/src/commands/eval/: mod.rs  report.rs  run.rs  score.rs  validate.rs
crates/fastskill-cli/src/commands/registry/: formatters.rs  helpers.rs  marketplace.rs  mod.rs  repo_ops.rs  skill_ops.rs
crates/fastskill-cli/src/commands/skillopt/: config.rs  export.rs  inspect.rs  mod.rs  resume.rs  run.rs  status.rs
crates/fastskill-cli/src/utils/: api_client.rs  install_utils.rs  manifest_utils.rs  messages.rs  reindex_utils.rs
crates/fastskill-cli/tests/: lock_determinism_test.rs  lock_migration_test.rs  lock_scope_routing_test.rs
crates/fastskill-core/: CONTRIBUTING.md  Cargo.toml  README.md
crates/fastskill-core/src/: execution.rs  lib.rs  test_utils.rs  utils.rs
crates/fastskill-core/src/core/: analysis.rs  change_detection.rs  context_resolver.rs  dependencies.rs  dependency_resolver.rs  embedding.rs  eval_config_adapter.rs  frontmatter.rs  install.rs  lock.rs  manifest.rs  metadata.rs  mod.rs  origin.rs  origin_infer.rs  packaging.rs  project.rs  project_config.rs  reconciliation.rs  registry.rs  registry_index.rs  reindex.rs  repository.rs  resolver.rs  routing.rs  service.rs  skill_manager.rs  update.rs  validation.rs  vector_index.rs  version.rs  version_bump.rs
crates/fastskill-core/src/core/registry/: auth.rs  client.rs  config.rs  index_manager.rs  validation_worker.rs
crates/fastskill-core/src/core/repository/: client.rs
crates/fastskill-core/src/core/sources/: local.rs  manager.rs  marketplace.rs  mod.rs  model.rs
crates/fastskill-core/src/eval/: artifacts.rs  suite.rs  trace.rs
crates/fastskill-core/src/events/: event_bus.rs
crates/fastskill-core/src/http/: errors.rs  mod.rs  models.rs  server.rs
crates/fastskill-core/src/http/handlers/: claude_api.rs  manifest.rs  mod.rs  registry.rs  registry_publish.rs  reindex.rs  resolve.rs  search.rs  skill_storage.rs  skills.rs  status.rs
crates/fastskill-core/src/http/static/: app.js  index.html  styles.css
crates/fastskill-core/src/output/: mod.rs
crates/fastskill-core/src/search/: local.rs  mod.rs  remote.rs
crates/fastskill-core/src/security/: mod.rs  path.rs
crates/fastskill-core/src/storage/: filesystem.rs  git.rs  hot_reload.rs  vector_index.rs  zip.rs
crates/fastskill-core/src/validation/: content_safety.rs  field_validation.rs  file_structure.rs  frontmatter.rs  mod.rs  result.rs  skill_validator.rs  skill_validator_tests.rs  standard_validator.rs  zip_validator.rs
crates/fastskill-core/tests/: core_project_tests.rs  cors_tests.rs  git_consumption_test.rs  http_handler_route_tests.rs  http_server_route_tests.rs  index_manager_test.rs  integration_skill_project_toml_test.rs  integration_unified_format_test.rs  metadata_validation_test.rs  registry_atomic_test.rs  registry_index_test.rs  skill_project_toml_test.rs  write_gate_tests.rs
crates/fastskill-evals/: Cargo.toml  README.md
crates/fastskill-evals/src/: artifacts.rs  config.rs  config_adapter.rs  lib.rs  runner.rs  trace.rs
crates/fastskill/src/: lib.rs
docs/: CODESCENE_HEALTH_IMPROVEMENT_PLAN.md  SECURITY_VALIDATION.md  cli-framework-api-adoption.md  plan-single-project-config.md
docs/adr/: 0001-remove-sync-command.md  0002-conditional-semantic-indexing.md  0003-serve-trust-boundary-and-edge-auth.md  0004-bare-version-is-exact.md  0005-install-seam-and-origin-model.md
docs/cli-reference/: analyze-commands.md
docs/requirements/: agent-runtime-selection-primitives.md  two-scope-lock-model.md
scripts/: install-git-hooks.sh  install.sh  run-codeql-scan.sh  run-tests.sh
specs/: 001-remove-publish.md  002-codebase-issues-audit.md  003-browser-skill-management.md
src/: execution.rs  lib.rs  python.rs  test_utils.rs
src/cli/: auth_config.rs  cli.rs  config.rs  config_file.rs  error.rs  mod.rs  utils.rs
src/core/: blob_storage.rs  build_cache.rs  change_detection.rs  dependencies.rs  dependency_resolver.rs  (+21 more)
tests/: auth_middleware_test.rs  cli_init_test.rs  cli_tests.rs  core_manifest_tests.rs  core_project_tests.rs  cors_tests.rs  git_consumption_test.rs  http_tests.rs  index_manager_test.rs  integration_registry_list_test.rs  integration_registry_publish_test.rs  integration_skill_project_toml_test.rs  integration_unified_format_test.rs  metadata_validation_test.rs  mock_anthropic.rs  proxy_tests.rs  registry_atomic_test.rs  registry_index_test.rs  skill_project_toml_test.rs  snapshot_helpers.rs
webdocs/: MIGRATION.md  TROUBLESHOOTING.md  cheatsheet.mdx  core-concepts.mdx  index.mdx  installation.mdx  meta.json  mint.json  quickstart.mdx  troubleshooting.mdx  welcome.mdx
(+374 files in other folders)
