[package]
name = "fastskill"
version = "0.7.9"
edition = "2021"
description = "FastSkill is a AI Skills management tool"
authors = ["aroff"]
license = "Apache-2.0"
repository = "https://github.com/aroff/fastskill"
keywords = ["fastskill", "AI Skills", "ai tools", "anthropic", "claude"]
categories = ["tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "fastskill"
path = "src/bin/fastskill.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }  # Updated for JWT support
once_cell = "1.19"
regex = "1.10"

# File system and I/O
tokio-util = { version = "0.7", features = ["io"] }
notify = { version = "6.0", optional = true }
walkdir = "2.5"
fs2 = "0.4"  # Cross-platform file locking

# Archive handling
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# HTTP client for embedding API
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Multipart form data handling for skill uploads
multer = "3.1"

# HTTP server
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "fs"] }

# JWT authentication
jsonwebtoken = "9.2"

# Request validation
validator = { version = "0.20", features = ["derive"] }

# SQLite for vector index
rusqlite = { version = "0.29", features = ["bundled"] }

# SHA256 hashing for file integrity
sha2 = "0.10"

# Base64 encoding/decoding for JWT parsing
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Git support for CLI (optional)
git2 = { version = "0.18", default-features = false, features = ["https", "ssh"], optional = true }

# URL parsing for CLI
url = "2.5"

# File utilities
tempfile = "3.0"

# Directory utilities
dirs = "5.0"

# Semantic versioning
semver = "1.0"

# AWS S3 storage (always enabled - part of core CLI functionality)
aws-sdk-s3 = { version = "1" }
aws-config = { version = "1" }

# Python bindings (optional, Linux-only)
[target.'cfg(target_os = "linux")'.dependencies]
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3.0"


[features]
default = ["filesystem-storage", "hot-reload", "git-support"]
python-bindings = ["pyo3"]

# Storage backends
filesystem-storage = []
hot-reload = ["notify"]
git-support = ["git2"]

[lints.clippy]
# Warn about critical lints that should be avoided in production code
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Allow some lints in specific contexts
too_many_arguments = "allow"
module_name_repetitions = "allow"
