[workspace]
members = [
    "crates/fastskill-evals",
    "crates/fastskill-agent-runtime",
    "crates/fastskill-core",
    "crates/fastskill-cli",
]
resolver = "2"

[workspace.package]
version = "0.9.112"
edition = "2021"
authors = ["aroff"]
license = "Apache-2.0"
repository = "https://github.com/aroff/fastskill"

[workspace.dependencies]
# aikit-sdk for agent metadata file resolution
aikit-sdk = { git = "https://github.com/goaikit/aikit", branch = "main" }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "fs", "io-util", "macros", "process"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.0", default-features = false, features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
once_cell = "1.19"
regex = { version = "1.10", default-features = false, features = ["unicode-perl"] }
num_cpus = "1.16"

# File system and I/O
tokio-util = { version = "0.7", features = ["io"] }
notify = "6.0"
walkdir = "2.5"
fs2 = "0.4"

# Archive handling
zip = { version = "2.4", default-features = false, features = ["deflate"] }

# HTTP client for embedding API (rustls for musl compatibility)
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# Multipart form data handling for skill uploads
multer = "3.1"

# HTTP server
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "fs"] }

# Request validation
validator = { version = "0.20", features = ["derive"] }

# SQLite for vector index
rusqlite = { version = "0.39", features = ["bundled"] }

# SHA256 hashing for file integrity
sha2 = "0.10"

# Base64 encoding/decoding for JWT parsing
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"
clap = { version = "4.4", features = ["derive"] }
inquire = "0.7"

# URL parsing
url = "2.5"

# File utilities
tempfile = "3.27"

# Directory utilities
dirs = "6.0"

# Embed static assets
include_dir = "0.7"

# Semantic versioning
semver = "1.0"

# AWS S3 storage (for registry publishing)
aws-sdk-s3 = "1"
aws-config = "1"

[workspace.lints.clippy]
# Warn about critical lints that should be avoided in production code
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Allow some lints in specific contexts
too_many_arguments = "allow"
module_name_repetitions = "allow"

[profile.release]
# Optimize for size
opt-level = "z"
# Link-time optimization for better size reduction
lto = true
# Single codegen unit for better optimization
codegen-units = 1
# Strip symbols to reduce binary size
strip = true
# Use abort instead of unwinding (smaller binary)
panic = "abort"
# No debug info in release
debug = false
