[package]
name = "fastskill-cli"
version.workspace = true
edition.workspace = true
description = "FastSkill CLI - AI Skills management command-line tool"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["fastskill", "AI Skills", "ai tools", "anthropic", "claude"]
categories = ["tools", "command-line-utilities"]

[[bin]]
name = "fastskill"
path = "src/main.rs"

[dependencies]
# Core library
fastskill-core = { path = "../fastskill-core", default-features = false, features = ["filesystem-storage", "hot-reload"] }

# CLI framework for AppBuilder, command registry, MCP server, and doctor
cli-framework = { workspace = true, default-features = false, features = ["mcp-server", "mcp-install", "doctor", "testkit"] }
fastskill-evals = { path = "../fastskill-evals" }

# aikit-sdk for agent integration
aikit-sdk.workspace = true

# aikit-skillopt for text-gradient skill optimization
aikit-skillopt.workspace = true

# CLI-specific dependencies
clap.workspace = true
inquire.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
once_cell.workspace = true
regex.workspace = true
num_cpus.workspace = true

# File system and I/O
tokio-util.workspace = true
walkdir.workspace = true
fs2.workspace = true

# HTTP client
reqwest.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# SHA256 hashing
sha2.workspace = true

# Configuration
config.workspace = true

# URL parsing
url.workspace = true

# File utilities
tempfile.workspace = true

# Directory utilities
dirs.workspace = true

# Semantic versioning
semver.workspace = true

# Vendored OpenSSL — required for musl cross-compilation because cli-framework and
# aikit-sdk depend on reqwest without default-features = false, which unifies
# native-tls into the build. The vendored feature compiles OpenSSL from source
# so the build is self-contained in environments without a system OpenSSL.
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[features]
default = []
vendored-openssl = ["dep:openssl"]

[dev-dependencies]
tempfile.workspace = true
insta = "1.47"
assert_cmd = "2.2"
predicates = "3.0"

[lints]
workspace = true
