[package]
name = "fastskill-core"
version.workspace = true
edition.workspace = true
description = "FastSkill core library - AI Skills management toolkit"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["fastskill", "AI Skills", "ai tools", "anthropic", "claude"]
categories = ["tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
once_cell.workspace = true
regex.workspace = true
num_cpus.workspace = true

# File system and I/O
tokio-util.workspace = true
notify = { workspace = true, optional = true }
walkdir.workspace = true
fs2.workspace = true

# Archive handling
zip.workspace = true

# HTTP client for embedding API (rustls for musl compatibility)
reqwest.workspace = true

# Multipart form data handling for skill uploads
multer.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Request validation
validator.workspace = true

# SQLite for vector index
rusqlite.workspace = true

# SHA256 hashing for file integrity
sha2.workspace = true

# Base64 encoding/decoding for JWT parsing
base64.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
config.workspace = true

# URL parsing
url.workspace = true

# File utilities
tempfile.workspace = true

# Directory utilities
dirs.workspace = true

# Embed static assets
include_dir.workspace = true

# Semantic versioning
semver.workspace = true

# AWS S3 storage (optional - only for registry publishing)
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
wiremock = "0.5"
insta = "1.47"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["filesystem-storage", "registry-publish"]

# Storage backends
filesystem-storage = []
hot-reload = ["notify"]

# Registry publishing (requires AWS SDK)
registry-publish = ["aws-sdk-s3", "aws-config"]

[lints]
workspace = true
