[package]
name = "fastskill-core"
version.workspace = true
edition.workspace = true
description = "FastSkill core library - AI Skills management toolkit"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["fastskill", "ai-skills", "ai-tools", "anthropic", "claude"]
categories = ["command-line-utilities"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
toml_edit.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
once_cell.workspace = true
regex.workspace = true
num_cpus.workspace = true

# File system and I/O
tokio-util.workspace = true
notify = { workspace = true, optional = true }
walkdir.workspace = true

# Archive handling
zip.workspace = true

# HTTP client for embedding API (rustls for musl compatibility)
reqwest.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
cli-framework.workspace = true

# Request validation
validator.workspace = true

# SQLite for vector index
rusqlite.workspace = true

# SHA256 hashing for file integrity
sha2.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
config.workspace = true

# URL parsing
url.workspace = true

# File utilities
tempfile.workspace = true

# Directory utilities
dirs.workspace = true

# Embed static assets
include_dir.workspace = true

# Semantic versioning
semver.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock = "0.5"
insta = "1.47"
assert_cmd = "2.2"
predicates = "3.0"

[features]
default = ["filesystem-storage"]

# Storage backends
filesystem-storage = []
hot-reload = ["notify"]

[lints]
workspace = true
