[package]
name = "fastskill-evals"
version.workspace = true
edition.workspace = true
description = "Standalone eval infrastructure for agent task evaluation"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["eval", "agent", "ai", "testing", "fastskill"]
categories = ["development-tools::testing"]

[dependencies]
fastskill-core = { path = "../fastskill-core", default-features = false, features = ["filesystem-storage"] }
aikit-sdk.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
base64.workspace = true
num_cpus.workspace = true
tracing.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
